--- a/Synchronized.WebApp/Pages/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Index.cshtml
@@ -2,114 +2,82 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
-    ViewData["Message"] = "Welcome";
+    ViewData["Message"] = "Welcome!";
+    ViewData["CurrentPage"] = "/Index";
 }
 
-<div>
-    @Model.Questions.ElementAt(1).Title
-</div>
+@{
+    var counter = 1;
+    foreach (var item in Model.Questions)
+    {
+        <div class="app-question-link row">
+            <div class="app-data app-question-points col-sm-2">
+                <div class="app-points">
+                    <h4>@item.Points</h4><i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="app-data col-sm-8">
+                <div class="app-question-title">
+                    <h3><a asp-page="/Questions/Details/@item.Id">@item.Title</a></h3>
+                    <div class="app-labels">
+                        @{
+                            var first = true;
+                            var tagNames = "";
+                            var name = "tags-" + counter;
+                            counter++;
+                            foreach (var questionTag in item.QuestionTags)
+                            {
+                                if (!first)
+                                {
+                                    tagNames += "," + questionTag.Tag.Name;
+                                }
+                                else
+                                {
+                                    tagNames += questionTag.Tag.Name;
+                                    first = false;
+                                }
+                            }
+                            first = true;
+                        }
+                        <input class="app-tags" name=@name id=@name value=@tagNames />
+                    </div>
+                </div>
+            </div>
+            <div class="app-data app-question-status col-sm-2">
+                @if (item.Answers == null || item.Answers.Count() == 0)
+                    {
+                        <img src="~/Content/images/x_mark_grey.png" />
+                    }
+                    else if (item.Answered())
+                    {
+                        <img src="~/Content/images/GreenV.png" />
+                    }
+                    else
+                    {
+                        <img src="~/Content/images/YellowV.png" />
+                    }
+            </div>
+        </div>
+    }
+}
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
+@{
+    var prevDisabled = !Model.Questions.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.Questions.HasNextPage ? "disabled" : "";
+}
+<a asp-page="/Index" asp-route-pageNumber="@(Model.Questions.PageIndex - 1)"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+@*TODO: Add the "maxPages" with a setter and getter to the Questions page object*@
+@for (var i = 1; i <= Model.CurrentPage; i++)
+{
+    <a asp-page="/Index" asp-route-pageNumber="@i" 
+       class="btn btn-default">
+        @i
     </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core Razor Pages</li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?linkid=852130">Working with Razor Pages.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure App Service</a></li>
-        </ul>
-    </div>
-</div>
+}
+<a asp-page="/Index" asp-route-pageNumber="@(Model.Questions.PageIndex + 1)" 
+   class="btn btn-default">
+    Next
+</a>
