--- a/Synchronized.WebApp/wwwroot/css/site.css
+++ b/Synchronized.WebApp/wwwroot/css/site.css
@@ -22,7 +22,8 @@ body {
 
 #app-page-message {
     float: left;
-    font-size: 1.5em;
+    font-size: 16px;
+    padding-top: 15px;
 }
 
 /* Carousel */
