--- a/Synchronized.WebApp/Pages/Questions/Details.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Details.cshtml
@@ -11,8 +11,8 @@
             <div id="q-points">
                 @Html.DisplayFor(model => model.Question.Points)
             </div>
-            <div class="app-btn"><i class="fa fa-plus-square"></i></div>
-            <div class="app-btn"><i class="fa fa-minus-square"></i></div>
+            <div class="vote-btn"><i class="fa fa-plus-square"></i></div>
+            <div class="vote-btn"><i class="fa fa-minus-square"></i></div>
         </div>
         <div id="question-content" class="col-md-10">
             <div class="app-qcontent">
@@ -22,9 +22,11 @@
             </div>
             @Html.DisplayFor(model => model.Question.Publisher.UserName)
             @Html.DisplayFor(model => model.Question.DatePosted)
-            <div class="app-qactions">
-                <a href="#">Edit</a><a href="#">Flag</a><a href="#">Close</a><a href="#">Delete</a>
-            </div>
+            <nav class="nav">
+                <a class="nav-link" href="#">Edit</a>
+                <a class="nav-link" href="#">Flag</a>
+                <a class="nav-link" href="#">Close</a>
+            </nav>
             @if (Model.Question.Comments != null && Model.Question.Comments.Count() > 0)
             {                
                 <div class="comments">
@@ -35,9 +37,10 @@
                             <hr />
                             <div class="comment-content">
                                 <div>@Html.Raw(comment.Body)</div>
-                            </div>
-                            <div class="comment-nav">
-                                <a href="#">Flag</a><a href="#">Edit</a>
+                                <nav class="nav">
+                                    <a class="nav-link" href="#">Edit</a>
+                                    <a class="nav-link" href="#">Flag</a>
+                                </nav>
                             </div>
                         }
                     }
@@ -52,12 +55,8 @@
     </div>
     @if (Model.Question.Answers.Count != 0)
     {
-        <div id="app-answers-header">
-            <div class="container">
-                <div class="site-message">
-                    @Html.DisplayNameFor(model => model.Question.Answers)
-                </div>
-            </div>
+        <div class="synched-message-container">
+            <div class="synched-message answers-header">@Html.DisplayNameFor(model => model.Question.Answers)</div>
         </div>
     }
     <div id="app-answers">
@@ -69,9 +68,9 @@
                 <div class="app-stats col-md-1">
                     <div class="answer-number">@counter.</div>
                     @{ counter++; }
-                    <div class="a-points">@answer.Points.</div>
-                    <div class="app-btn"><i class="fa fa-plus-square"></i></div>
-                    <div class="app-btn"><i class="fa fa-minus-square"></i></div>
+                    <div class="a-points">@answer.Points</div>
+                    <div class="vote-btn"><i class="fa fa-plus-square"></i></div>
+                    <div class="vote-btn"><i class="fa fa-minus-square"></i></div>
                 </div>
                 <div class="col-md-10">
                     @Html.Raw(answer.Body)
@@ -106,15 +105,23 @@
 
         }        
     </div>
-    <div id="app-answers-header">
-            <div class="site-message">
-                Your answer
-            </div>
-            <div class="user-answer">
-                <textarea></textarea>                
-            </div>      
-            <div class="app-submit-btn">
-                <input type="button" value="Submit" class="btn btn-default" />
-            </div>
-    </div>
+
+    <form method="POST" id="synched-ask">
+        <div class="synched-message-container">
+            <div class="synched-message answers-header">Your answer</div>
+        </div>
+        <div class="form-group">
+            <textarea asp-for="Answer"></textarea>
+        </div>
+        <button type="submit" class="btn btn-secondary">Submit</button>
+    </form>
 </section>
+
+@section Styles {
+    <link href="~/lib/jQuery-TE_v.1.4.0/jquery-te-1.4.0.css" rel="stylesheet" />
+}
+
+@section Scripts {
+    <script src="~/lib/jQuery-TE_v.1.4.0/uncompressed/jquery-te-1.4.0.js"></script>
+    <script src="~/js/details.js"></script>
+}
