--- a/Synchronized.WebApp/Pages/_MainNavPartial.cshtml
+++ b/Synchronized.WebApp/Pages/_MainNavPartial.cshtml
@@ -1,8 +1,13 @@
-﻿<ul class="navbar-nav mr-auto" >
-    <li class="navbar-brand"><a asp-page="/Questions/Index" class="nav-link">Questions</a></li>
-    <li class="navbar-brand"><a asp-page="/Tags/Index" class="nav-link">Tags</a></li>
-    <li class="navbar-brand"><a asp-page="/Users/Index" class="nav-link">Users</a></li>
-    <li class="navbar-brand"><a asp-page="/Questions/Ask" class="nav-link">Ask</a></li>
-    <li class="navbar-brand"><a asp-page="/Questions/Review" class="nav-link">Review</a></li>
-    <li class="navbar-brand"><a asp-page="/Questions/Deleted" class="nav-link">Deleted</a></li>
-</ul>  
+﻿<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+        <li class="navbar-brand"><a asp-page="/Questions/Index" class="nav-link">Questions</a></li>
+        <li class="navbar-brand"><a asp-page="/Tags/Index" class="nav-link">Tags</a></li>
+        <li class="navbar-brand"><a asp-page="/Users/Index" class="nav-link">Users</a></li>
+        <li class="navbar-brand"><a asp-page="/Questions/Ask" class="nav-link">Ask</a></li>
+        <li class="navbar-brand"><a asp-page="/Questions/Review" class="nav-link">Review</a></li>
+        <li class="navbar-brand"><a asp-page="/Questions/Deleted" class="nav-link">Deleted</a></li>
+    </ul>
+</div>
