--- a/Synchronized.WebApp/Pages/Questions/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Index.cshtml
@@ -80,7 +80,7 @@
                             <i class="fa fa-envelope-o" aria-hidden="true"></i>
                         </div>
                         <div class="synched-views col-md-1">
-                            <div class="views">@item.Views</div><i class="fa fa-eye" aria-hidden="true"></i>
+                            <div class="views">@item.QuestionViews.Count</div><i class="fa fa-eye" aria-hidden="true"></i>
                         </div>
                         <div class="points col-md-1">
                             <div class="synched-points">@item.Points</div><i class="fa fa-star-o" aria-hidden="true"></i>
